* Ensure byName() returns an array of elements. [jddalton]

* Fix jQuery adapter regression in `even`, `odd`, `eq`, `lt`, and `gt` pseudo selectors. [jddalton]

* Reduce variables used in compileSelector(), replace a compatMode check with `isQuirks` and modify a couple code comments. [jddalton]

* Make compileSelector() ensure element exists before checking nodeType on adjacent sibling selectors. [jddalton]

* Make `UID`'s property name harder to conflict with. [Diego Perini, jddalton]

* Fix `BUGGY_GEBID` feature test. [Diego Perini, jddalton]

* Removed strict check for (even/odd) in the Patterns.spseudos regexp and simplify regexps in the `an+b` processing in compileSelector(). [Diego Perini, jddalton]

* Rename variable `isClassNameLowered` to `isQuirks`. [Diego Perini]

* Fix `RE_BUGGY_QSAPI` class attribute feature test and correct Dojo unit tests. [jddalton]

* Fix regression in compileSelector() and make Patterns.attribute use a non-greedy `.*?`. [jddalton]

* Ensure `:enabled` and `:disabled` dynamic pseudos only match elements with a `type` property to avoid false positives on LABEL elements. [jddalton]

* Rename `base` to `doc`, `doc` variable is updated for each selection so the in-line tests all references the ownerDocument of the scrutinized elements. [Diego Perini, kangax]

* Refine regexp used in stripTags(), Patterns.attribute, Patterns.dpseudos, `reSiblings`, `reSplitGroup`, `reLastToken`, `reUnnormalized`, `reUseSafeNormalize`, `reValidator`, `RE_BUGGY_MUTATION`, and `RE_SIMPLE_SELECTOR`. [jddalton]

* Rename `strEncoding` to `strIdentifier`, `strSkipGroup` to strSkipGroups, `reClassValue` to `reIdentifier`, and `reSplitToken` to `reLastToken`. [jddalton]

* Modify the compiler to reduce the number of times it checks nodeName/nodeType values. [jddalton]

* Revert to using `in` operator when resolving `:enabled` and `:disabled` dynamic pseudo classes on control elements. [Diego Perini]
